Compiler/COMPILADOR/step/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BAD_CADEIA
    BAD_VARIAVEL
    COMENTARIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO declaracoes FIM
Rule 2     declaracoes -> declaracao declaracoes
Rule 3     declaracoes -> estrutura declaracoes
Rule 4     declaracoes -> <empty>
Rule 5     declaracao -> expressao FIM_LINHA
Rule 6     declaracao -> initi_var FIM_LINHA
Rule 7     declaracao -> atrib_var FIM_LINHA
Rule 8     declaracao -> leia FIM_LINHA
Rule 9     declaracao -> escreva FIM_LINHA
Rule 10    initi_var -> INTEIRO VARIAVEL
Rule 11    initi_var -> REAL VARIAVEL
Rule 12    initi_var -> BOOLEANO VARIAVEL
Rule 13    initi_var -> CADEIA VARIAVEL
Rule 14    initi_var -> VETOR_INTEIRO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
Rule 15    initi_var -> VETOR_REAL VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
Rule 16    initi_var -> VETOR_BOOLEANO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
Rule 17    atrib_var -> VARIAVEL OP_ATRIBUI expressao
Rule 18    atrib_var -> VARIAVEL OP_ATRIBUI ABRE_COLCHETES cria_sequencia FECHA_COLCHETES
Rule 19    atrib_var -> pos_lista OP_ATRIBUI expressao
Rule 20    pos_lista -> VARIAVEL ABRE_COLCHETES expressao FECHA_COLCHETES
Rule 21    cria_sequencia -> termo VIRGULA cria_sequencia
Rule 22    cria_sequencia -> termo
Rule 23    leia -> LEIA ABRE_PARENTESES termo VIRGULA VARIAVEL FECHA_PARENTESES
Rule 24    escreva -> ESCREVA ABRE_PARENTESES termo VIRGULA cria_sequencia FECHA_PARENTESES
Rule 25    escreva -> ESCREVA ABRE_PARENTESES termo FECHA_PARENTESES
Rule 26    estrutura -> se
Rule 27    estrutura -> enquanto
Rule 28    estrutura -> para
Rule 29    se -> SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes FIMSE
Rule 30    se -> SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes SENAO declaracoes FIMSE
Rule 31    para -> PARA VARIAVEL DE termo ATE termo PASSO termo FACA declaracoes FIMPARA
Rule 32    enquanto -> ENQUANTO ABRE_PARENTESES expressao FECHA_PARENTESES FACA declaracoes FIMENQUANTO
Rule 33    expressao -> termo OP_SOMA expressao
Rule 34    expressao -> termo OP_SUB expressao
Rule 35    expressao -> termo OP_MULT expressao
Rule 36    expressao -> termo OP_DIV expressao
Rule 37    expressao -> termo OP_MENOR expressao
Rule 38    expressao -> termo OP_MAIOR expressao
Rule 39    expressao -> termo OP_MENOR_IGUAL expressao
Rule 40    expressao -> termo OP_MAIOR_IGUAL expressao
Rule 41    expressao -> termo OP_IGUAL expressao
Rule 42    expressao -> termo OP_DIFF expressao
Rule 43    expressao -> termo OP_AND expressao
Rule 44    expressao -> termo OP_OR expressao
Rule 45    expressao -> termo
Rule 46    termo -> NUM_INTEIRO
Rule 47    termo -> NUM_FLOAT
Rule 48    termo -> ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 49    termo -> NUM_BOOLEANO
Rule 50    termo -> STRING_CADEIA
Rule 51    termo -> VARIAVEL
Rule 52    termo -> pos_lista

Terminals, with rules where they appear

ABRE_COLCHETES       : 14 15 16 18 20
ABRE_PARENTESES      : 23 24 25 29 30 32 48
ATE                  : 31
BAD_CADEIA           : 
BAD_VARIAVEL         : 
BOOLEANO             : 12
CADEIA               : 13
COMENTARIO           : 
DE                   : 31
ENQUANTO             : 32
ENTAO                : 29 30
ESCREVA              : 24 25
FACA                 : 31 32
FECHA_COLCHETES      : 14 15 16 18 20
FECHA_PARENTESES     : 23 24 25 29 30 32 48
FIM                  : 1
FIMENQUANTO          : 32
FIMPARA              : 31
FIMSE                : 29 30
FIM_LINHA            : 5 6 7 8 9
INICIO               : 1
INTEIRO              : 10
LEIA                 : 23
NUM_BOOLEANO         : 49
NUM_FLOAT            : 47
NUM_INTEIRO          : 14 15 16 46
OP_AND               : 43
OP_ATRIBUI           : 17 18 19
OP_DIFF              : 42
OP_DIV               : 36
OP_IGUAL             : 41
OP_MAIOR             : 38
OP_MAIOR_IGUAL       : 40
OP_MENOR             : 37
OP_MENOR_IGUAL       : 39
OP_MULT              : 35
OP_OR                : 44
OP_SOMA              : 33
OP_SUB               : 34
PARA                 : 31
PASSO                : 31
REAL                 : 11
SE                   : 29 30
SENAO                : 30
STRING_CADEIA        : 50
VARIAVEL             : 10 11 12 13 14 15 16 17 18 20 23 31 51
VETOR_BOOLEANO       : 16
VETOR_INTEIRO        : 14
VETOR_REAL           : 15
VIRGULA              : 21 23 24
error                : 

Nonterminals, with rules where they appear

atrib_var            : 7
cria_sequencia       : 18 21 24
declaracao           : 2
declaracoes          : 1 2 3 29 30 30 31 32
enquanto             : 27
escreva              : 9
estrutura            : 3
expressao            : 5 17 19 20 29 30 32 33 34 35 36 37 38 39 40 41 42 43 44 48
initi_var            : 6
leia                 : 8
para                 : 28
pos_lista            : 19 52
programa             : 0
se                   : 26
termo                : 21 22 23 24 25 31 31 31 33 34 35 36 37 38 39 40 41 42 43 44 45

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO declaracoes FIM

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . declaracoes FIM
    (2) declaracoes -> . declaracao declaracoes
    (3) declaracoes -> . estrutura declaracoes
    (4) declaracoes -> .
    (5) declaracao -> . expressao FIM_LINHA
    (6) declaracao -> . initi_var FIM_LINHA
    (7) declaracao -> . atrib_var FIM_LINHA
    (8) declaracao -> . leia FIM_LINHA
    (9) declaracao -> . escreva FIM_LINHA
    (26) estrutura -> . se
    (27) estrutura -> . enquanto
    (28) estrutura -> . para
    (33) expressao -> . termo OP_SOMA expressao
    (34) expressao -> . termo OP_SUB expressao
    (35) expressao -> . termo OP_MULT expressao
    (36) expressao -> . termo OP_DIV expressao
    (37) expressao -> . termo OP_MENOR expressao
    (38) expressao -> . termo OP_MAIOR expressao
    (39) expressao -> . termo OP_MENOR_IGUAL expressao
    (40) expressao -> . termo OP_MAIOR_IGUAL expressao
    (41) expressao -> . termo OP_IGUAL expressao
    (42) expressao -> . termo OP_DIFF expressao
    (43) expressao -> . termo OP_AND expressao
    (44) expressao -> . termo OP_OR expressao
    (45) expressao -> . termo
    (10) initi_var -> . INTEIRO VARIAVEL
    (11) initi_var -> . REAL VARIAVEL
    (12) initi_var -> . BOOLEANO VARIAVEL
    (13) initi_var -> . CADEIA VARIAVEL
    (14) initi_var -> . VETOR_INTEIRO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (15) initi_var -> . VETOR_REAL VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (16) initi_var -> . VETOR_BOOLEANO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (17) atrib_var -> . VARIAVEL OP_ATRIBUI expressao
    (18) atrib_var -> . VARIAVEL OP_ATRIBUI ABRE_COLCHETES cria_sequencia FECHA_COLCHETES
    (19) atrib_var -> . pos_lista OP_ATRIBUI expressao
    (23) leia -> . LEIA ABRE_PARENTESES termo VIRGULA VARIAVEL FECHA_PARENTESES
    (24) escreva -> . ESCREVA ABRE_PARENTESES termo VIRGULA cria_sequencia FECHA_PARENTESES
    (25) escreva -> . ESCREVA ABRE_PARENTESES termo FECHA_PARENTESES
    (29) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes FIMSE
    (30) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes SENAO declaracoes FIMSE
    (32) enquanto -> . ENQUANTO ABRE_PARENTESES expressao FECHA_PARENTESES FACA declaracoes FIMENQUANTO
    (31) para -> . PARA VARIAVEL DE termo ATE termo PASSO termo FACA declaracoes FIMPARA
    (46) termo -> . NUM_INTEIRO
    (47) termo -> . NUM_FLOAT
    (48) termo -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (49) termo -> . NUM_BOOLEANO
    (50) termo -> . STRING_CADEIA
    (51) termo -> . VARIAVEL
    (52) termo -> . pos_lista
    (20) pos_lista -> . VARIAVEL ABRE_COLCHETES expressao FECHA_COLCHETES

    FIM             reduce using rule 4 (declaracoes -> .)
    INTEIRO         shift and go to state 15
    REAL            shift and go to state 17
    BOOLEANO        shift and go to state 18
    CADEIA          shift and go to state 19
    VETOR_INTEIRO   shift and go to state 20
    VETOR_REAL      shift and go to state 22
    VETOR_BOOLEANO  shift and go to state 23
    VARIAVEL        shift and go to state 16
    LEIA            shift and go to state 25
    ESCREVA         shift and go to state 27
    SE              shift and go to state 28
    ENQUANTO        shift and go to state 29
    PARA            shift and go to state 30
    NUM_INTEIRO     shift and go to state 21
    NUM_FLOAT       shift and go to state 31
    ABRE_PARENTESES shift and go to state 26
    NUM_BOOLEANO    shift and go to state 32
    STRING_CADEIA   shift and go to state 33

    declaracoes                    shift and go to state 3
    declaracao                     shift and go to state 4
    estrutura                      shift and go to state 5
    expressao                      shift and go to state 6
    initi_var                      shift and go to state 7
    atrib_var                      shift and go to state 8
    leia                           shift and go to state 9
    escreva                        shift and go to state 10
    se                             shift and go to state 11
    enquanto                       shift and go to state 12
    para                           shift and go to state 13
    termo                          shift and go to state 14
    pos_lista                      shift and go to state 24

state 3

    (1) programa -> INICIO declaracoes . FIM

    FIM             shift and go to state 34


state 4

    (2) declaracoes -> declaracao . declaracoes
    (2) declaracoes -> . declaracao declaracoes
    (3) declaracoes -> . estrutura declaracoes
    (4) declaracoes -> .
    (5) declaracao -> . expressao FIM_LINHA
    (6) declaracao -> . initi_var FIM_LINHA
    (7) declaracao -> . atrib_var FIM_LINHA
    (8) declaracao -> . leia FIM_LINHA
    (9) declaracao -> . escreva FIM_LINHA
    (26) estrutura -> . se
    (27) estrutura -> . enquanto
    (28) estrutura -> . para
    (33) expressao -> . termo OP_SOMA expressao
    (34) expressao -> . termo OP_SUB expressao
    (35) expressao -> . termo OP_MULT expressao
    (36) expressao -> . termo OP_DIV expressao
    (37) expressao -> . termo OP_MENOR expressao
    (38) expressao -> . termo OP_MAIOR expressao
    (39) expressao -> . termo OP_MENOR_IGUAL expressao
    (40) expressao -> . termo OP_MAIOR_IGUAL expressao
    (41) expressao -> . termo OP_IGUAL expressao
    (42) expressao -> . termo OP_DIFF expressao
    (43) expressao -> . termo OP_AND expressao
    (44) expressao -> . termo OP_OR expressao
    (45) expressao -> . termo
    (10) initi_var -> . INTEIRO VARIAVEL
    (11) initi_var -> . REAL VARIAVEL
    (12) initi_var -> . BOOLEANO VARIAVEL
    (13) initi_var -> . CADEIA VARIAVEL
    (14) initi_var -> . VETOR_INTEIRO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (15) initi_var -> . VETOR_REAL VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (16) initi_var -> . VETOR_BOOLEANO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (17) atrib_var -> . VARIAVEL OP_ATRIBUI expressao
    (18) atrib_var -> . VARIAVEL OP_ATRIBUI ABRE_COLCHETES cria_sequencia FECHA_COLCHETES
    (19) atrib_var -> . pos_lista OP_ATRIBUI expressao
    (23) leia -> . LEIA ABRE_PARENTESES termo VIRGULA VARIAVEL FECHA_PARENTESES
    (24) escreva -> . ESCREVA ABRE_PARENTESES termo VIRGULA cria_sequencia FECHA_PARENTESES
    (25) escreva -> . ESCREVA ABRE_PARENTESES termo FECHA_PARENTESES
    (29) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes FIMSE
    (30) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes SENAO declaracoes FIMSE
    (32) enquanto -> . ENQUANTO ABRE_PARENTESES expressao FECHA_PARENTESES FACA declaracoes FIMENQUANTO
    (31) para -> . PARA VARIAVEL DE termo ATE termo PASSO termo FACA declaracoes FIMPARA
    (46) termo -> . NUM_INTEIRO
    (47) termo -> . NUM_FLOAT
    (48) termo -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (49) termo -> . NUM_BOOLEANO
    (50) termo -> . STRING_CADEIA
    (51) termo -> . VARIAVEL
    (52) termo -> . pos_lista
    (20) pos_lista -> . VARIAVEL ABRE_COLCHETES expressao FECHA_COLCHETES

    FIM             reduce using rule 4 (declaracoes -> .)
    FIMSE           reduce using rule 4 (declaracoes -> .)
    SENAO           reduce using rule 4 (declaracoes -> .)
    FIMENQUANTO     reduce using rule 4 (declaracoes -> .)
    FIMPARA         reduce using rule 4 (declaracoes -> .)
    INTEIRO         shift and go to state 15
    REAL            shift and go to state 17
    BOOLEANO        shift and go to state 18
    CADEIA          shift and go to state 19
    VETOR_INTEIRO   shift and go to state 20
    VETOR_REAL      shift and go to state 22
    VETOR_BOOLEANO  shift and go to state 23
    VARIAVEL        shift and go to state 16
    LEIA            shift and go to state 25
    ESCREVA         shift and go to state 27
    SE              shift and go to state 28
    ENQUANTO        shift and go to state 29
    PARA            shift and go to state 30
    NUM_INTEIRO     shift and go to state 21
    NUM_FLOAT       shift and go to state 31
    ABRE_PARENTESES shift and go to state 26
    NUM_BOOLEANO    shift and go to state 32
    STRING_CADEIA   shift and go to state 33

    declaracao                     shift and go to state 4
    declaracoes                    shift and go to state 35
    estrutura                      shift and go to state 5
    expressao                      shift and go to state 6
    initi_var                      shift and go to state 7
    atrib_var                      shift and go to state 8
    leia                           shift and go to state 9
    escreva                        shift and go to state 10
    se                             shift and go to state 11
    enquanto                       shift and go to state 12
    para                           shift and go to state 13
    termo                          shift and go to state 14
    pos_lista                      shift and go to state 24

state 5

    (3) declaracoes -> estrutura . declaracoes
    (2) declaracoes -> . declaracao declaracoes
    (3) declaracoes -> . estrutura declaracoes
    (4) declaracoes -> .
    (5) declaracao -> . expressao FIM_LINHA
    (6) declaracao -> . initi_var FIM_LINHA
    (7) declaracao -> . atrib_var FIM_LINHA
    (8) declaracao -> . leia FIM_LINHA
    (9) declaracao -> . escreva FIM_LINHA
    (26) estrutura -> . se
    (27) estrutura -> . enquanto
    (28) estrutura -> . para
    (33) expressao -> . termo OP_SOMA expressao
    (34) expressao -> . termo OP_SUB expressao
    (35) expressao -> . termo OP_MULT expressao
    (36) expressao -> . termo OP_DIV expressao
    (37) expressao -> . termo OP_MENOR expressao
    (38) expressao -> . termo OP_MAIOR expressao
    (39) expressao -> . termo OP_MENOR_IGUAL expressao
    (40) expressao -> . termo OP_MAIOR_IGUAL expressao
    (41) expressao -> . termo OP_IGUAL expressao
    (42) expressao -> . termo OP_DIFF expressao
    (43) expressao -> . termo OP_AND expressao
    (44) expressao -> . termo OP_OR expressao
    (45) expressao -> . termo
    (10) initi_var -> . INTEIRO VARIAVEL
    (11) initi_var -> . REAL VARIAVEL
    (12) initi_var -> . BOOLEANO VARIAVEL
    (13) initi_var -> . CADEIA VARIAVEL
    (14) initi_var -> . VETOR_INTEIRO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (15) initi_var -> . VETOR_REAL VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (16) initi_var -> . VETOR_BOOLEANO VARIAVEL ABRE_COLCHETES NUM_INTEIRO FECHA_COLCHETES
    (17) atrib_var -> . VARIAVEL OP_ATRIBUI expressao
    (18) atrib_var -> . VARIAVEL OP_ATRIBUI ABRE_COLCHETES cria_sequencia FECHA_COLCHETES
    (19) atrib_var -> . pos_lista OP_ATRIBUI expressao
    (23) leia -> . LEIA ABRE_PARENTESES termo VIRGULA VARIAVEL FECHA_PARENTESES
    (24) escreva -> . ESCREVA ABRE_PARENTESES termo VIRGULA cria_sequencia FECHA_PARENTESES
    (25) escreva -> . ESCREVA ABRE_PARENTESES termo FECHA_PARENTESES
    (29) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes FIMSE
    (30) se -> . SE ABRE_PARENTESES expressao FECHA_PARENTESES ENTAO declaracoes SENAO declaracoes FIMSE
    (32) enquanto -> . ENQUANTO ABRE_PARENTESES expressao FECHA_PARENTESES FACA declaracoes FIMENQUANTO
    (31) para -> . PARA VARIAVEL DE termo ATE termo PASSO termo FACA declaracoes FIMPARA
    (46) termo -> . NUM_INTEIRO
    (47) termo -> . NUM_FLOAT
    (48) termo -> . ABRE_PARENTESES expressao FECHA_PARENTESES
    (49) termo -> . NUM_BOOLEANO
    (50) termo -> . STRING_CADEIA
    (51) termo -> . VARIAVEL
    (52) termo -> . pos_lista
    (20) pos_lista -> . VARIAVEL ABRE_COLCHETES expressao FECHA_COLCHETES

    FIM             reduce using rule 4 (declaracoes -> .)
    FIMSE           reduce using rule 4 (declaracoes -> .)
    SENAO           reduce using rule 4 (declaracoes -> .)
    FIMENQUANTO     reduce using rule 4 (declaracoes -> .)
    FIMPARA         reduce using rule 4 (declaracoes -> .)
    INTEIRO         shift and go to state 15
    REAL            shift and go to state 17
    BOOLEANO        shift and go to state 18
    CADEIA          shift and go to state 19
    VETOR_INTEIRO   shift and go to state 20
    VETOR_REAL      shift and go to state 22
    VETOR_BOOLEANO  shift and go to state 23
    VARIAVEL        shift and go to state 16
    LEIA            shift and go to state 25
    ESCREVA         shift and go to state 27
    SE              shift and go to state 28
    ENQUANTO        shift and go to state 29
    PARA            shift and go to state 30
    NUM_INTEIRO     shift and go to state 21
    NUM_FLOAT       shift and go to state 31
    ABRE_PARENTESES shift and go to state 26
    NUM_BOOLEANO    shift and go to state 32
    STRING_CADEIA   shift and go to state 33

    estrutura                      shift and go to state 5
    declaracoes                    shift and go to state 36
    declaracao                     shift and go to state 4
    expressao                      shift and go to state 6
    initi_var                      shift and go to state 7
    atrib_var                      shift and go to state 8
    leia                           shift and go to state 9
    escreva                        shift and go to state 10
    se                             shift and go to state 11
    enquanto                       shift and go to state 12
    para                           shift and go to state 13
    termo                          shift and go to state 14
    pos_lista                      shift and go to state 24

state 6

    (5) declaracao -> expressao . FIM_LINHA

    FIM_LINHA       shift and go to state 37


state 7

    (6) declaracao -> initi_var . FIM_LINHA

    FIM_LINHA       shift and go to state 38


state 8

    (7) declaracao -> atrib_var . FIM_LINHA

    FIM_LINHA       shift and go to state 39


state 9

    (8) declaracao -> leia . FIM_LINHA

    FIM_LINHA       shift and go to state 40


state 10

    (9) declaracao -> escreva . FIM_LINHA

    FIM_LINHA       shift and go to state 41


state 11

    (26) estrutura -> se .

    INTEIRO         reduce using rule 26 (estrutura -> se .)
    REAL            reduce using rule 26 (estrutura -> se .)
    BOOLEANO        reduce using rule 26 (estrutura -> se .)
    CADEIA          reduce using rule 26 (estrutura -> se .)
    VETOR_INTEIRO   reduce using rule 26 (estrutura -> se .)
    VETOR_REAL      reduce using rule 26 (estrutura -> se .)
    VETOR_BOOLEANO  reduce using rule 26 (estrutura -> se .)
    VARIAVEL        reduce using rule 26 (estrutura -> se .)
    LEIA            reduce using rule 26 (estrutura -> se .)
    ESCREVA         reduce using rule 26 (estrutura -> se .)
    SE              reduce using rule 26 (estrutura -> se .)
    ENQUANTO        reduce using rule 26 (estrutura -> se .)
    PARA            reduce using rule 26 (estrutura -> se .)
    NUM_INTEIRO     reduce using rule 26 (estrutura -> se .)
    NUM_FLOAT       reduce using rule 26 (estrutura -> se .)
    ABRE_PARENTESES reduce using rule 26 (estrutura -> se .)
    NUM_BOOLEANO    reduce using rule 26 (estrutura -> se .)
    STRING_CADEIA   reduce using rule 26 (estrutura -> se .)
    FIM             reduce using rule 26 (estrutura -> se .)
    FIMSE           reduce using rule 26 (estrutura -> se .)
    SENAO           reduce using rule 26 (estrutura -> se .)
    FIMENQUANTO     reduce using rule 26 (estrutura -> se .)
    FIMPARA         reduce using rule 26 (estrutura -> se .)


state 12

    (27) estrutura -> enquanto .

    INTEIRO         reduce using rule 27 (estrutura -> enquanto .)
    REAL            reduce using rule 27 (estrutura -> enquanto .)
    BOOLEANO        reduce using rule 27 (estrutura -> enquanto .)
    CADEIA          reduce using rule 27 (estrutura -> enquanto .)
    VETOR_INTEIRO   reduce using rule 27 (estrutura -> enquanto .)
    VETOR_REAL      reduce using rule 27 (estrutura -> enquanto .)
    VETOR_BOOLEANO  reduce using rule 27 (estrutura -> enquanto .)
    VARIAVEL        reduce using rule 27 (estrutura -> enquanto .)
    LEIA            reduce using rule 27 (estrutura -> enquanto .)
    ESCREVA         reduce using rule 27 (estrutura -> enquanto .)
    SE              reduce using rule 27 (estrutura -> enquanto .)
    ENQUANTO        reduce using rule 27 (estrutura -> enquanto .)
    PARA            reduce using rule 27 (estrutura -> enquanto .)
    NUM_INTEIRO     reduce using rule 27 (estrutura -> enquanto .)
    NUM_FLOAT       reduce using rule 27 (estrutura -> enquanto .)
    ABRE_PARENTESES reduce using rule 27 (estrutura -> enquanto .)
    NUM_BOOLEANO    reduce using rule 27 (estrutura -> enquanto .)
    STRING_CADEIA   reduce using rule 27 (estrutura -> enquanto .)
    FIM             reduce using rule 27 (estrutura -> enquanto .)
    FIMSE           reduce using rule 27 (estrutura -> enquanto .)
    SENAO           reduce using rule 27 (estrutura -> enquanto .)
    FIMENQUANTO     reduce using rule 27 (estrutura -> enquanto .)
    FIMPARA         reduce using rule 27 (estrutura -> enquanto .)


state 13

    (28) estrutura -> para .

    INTEIRO         reduce using rule 28 (estrutura -> para .)
    REAL            reduce using rule 28 (estrutura -> para .)
    BOOLEANO        reduce using rule 28 (estrutura -> para .)
    CADEIA          reduce using rule 28 (estrutura -> para .)
    VETOR_INTEIRO   reduce using rule 28 (estrutura -> para .)
    VETOR_REAL      reduce using rule 28 (estrutura -> para .)
    VETOR_BOOLEANO  reduce using rule 28 (estrutura -> para .)
    VARIAVEL        reduce using rule 28 (estrutura -> para .)
    LEIA            reduce using rule 28 (estrutura -> para .)
    ESCREVA         reduce using rule 28 (estrutura -> para .)
    SE              reduce using rule 28 (estrutura -> para .)
    ENQUANTO        reduce using rule 28 (estrutura -> para .)
    PARA            reduce using rule 28 (estrutura -> para .)
    NUM_INTEIRO     reduce using rule 28 (estrutura -> para .)
    NUM_FLOAT       reduce using rule 28 (estrutura -> para .)
    ABRE_PARENTESES reduce using rule 28 (estrutura -> para .)
    NUM_BOOLEANO    reduce using rule 28 (estrutura -> para .)
    STRING_CADEIA   reduce using rule 28 (estrutura -> para .)
    FIM             reduce using rule 28 (estrutura -> para .)
    FIMSE           reduce using rule 28 (estrutura -> para .)
    SENAO           reduce using rule 28 (estrutura -> para .)
    FIMENQUANTO     reduce using rule 28 (estrutura -> para .)
    FIMPARA         reduce using rule 28 (estrutura -> para .)


state 14

    (33) expressao -> termo . OP_SOMA expressao
    (34) expressao -> termo . OP_SUB expressao
    (35) expressao -> termo . OP_MULT expressao
    (36) expressao -> termo . OP_DIV expressao
    (37) expressao -> termo . OP_MENOR expressao
    (38) expressao -> termo . OP_MAIOR expressao
    (39) expressao -> termo . OP_MENOR_IGUAL expressao
    (40) expressao -> termo . OP_MAIOR_IGUAL expressao
    (41) expressao -> termo . OP_IGUAL expressao
    (42) expressao -> termo . OP_DIFF expressao
    (43) expressao -> termo . OP_AND expressao
    (44) expressao -> termo . OP_OR expressao
    (45) expressao -> termo .
